# MiniLog

./: .gitignore  CMakeLists.txt  LICENSE
docs/: Day-1.md  Day-2.md  Day-3.md
include/: Detail.h  Logger.h  MiniLog.h  Sink.h  StdCoutSink.h
include/details/: Common.h  LogMsg.h  SourceLoc.h
include/logger/: Logger.h  LoggerRegister.h
include/sink/: BasicFileSink.h  SinkBase.h  StdCoutSink.h
tests/base-test/: CMakeLists.txt  main.cpp
